--- a/app/src/main/res/layout/item_recycler_attach.xml
+++ b/app/src/main/res/layout/item_recycler_attach.xml
@@ -26,10 +26,12 @@
 
         <TextView
             android:id="@+id/lblTitleRecyclerAttach"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
+            android:layout_toRightOf="@+id/imgRemoveRecyclerAttach"
+            android:gravity="right"
             android:textSize="15sp" />
     </RelativeLayout>
 
