--- a/app/src/main/res/layout/content_act_main.xml
+++ b/app/src/main/res/layout/content_act_main.xml
@@ -1,51 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainLayoutActMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="ltr">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RecyclerToolbarActMain"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none" />
+        android:layout_height="match_parent">
 
-    <ss.com.bannerslider.views.BannerSlider
-        android:id="@+id/SliderActMain"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        app:defaultIndicators="round_square"
-        app:indicatorSize="7dp"
-        android:layout_below="@id/RecyclerToolbarActMain"
-        app:interval="5000"
-        app:loopSlides="true" />
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/RefreshTicket"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/SliderActMain">
-
-        <RelativeLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/RecyclerToolbarActMain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:scrollbars="none" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerActMain"
+        <ss.com.bannerslider.views.BannerSlider
+            android:id="@+id/SliderActMain"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_below="@id/RecyclerToolbarActMain"
+            app:defaultIndicators="round_square"
+            app:indicatorSize="7dp"
+            app:interval="5000"
+            app:loopSlides="true" />
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/RefreshTicket"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/SliderActMain">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="none" />
+                android:layout_height="match_parent">
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/FabActMain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="16dp"
-                app:backgroundTint="@color/colorAccent"
-                app:srcCompat="@drawable/ic_plus" />
-        </RelativeLayout>
-    </android.support.v4.widget.SwipeRefreshLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerActMain"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none" />
 
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/lblStatusActMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="موردی برای نمایش وجود ندارد"
+                    android:textColor="@color/colorGrayText"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/FabActMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_margin="16dp"
+                    app:backgroundTint="@color/colorAccent"
+                    app:srcCompat="@drawable/ic_plus" />
+            </RelativeLayout>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
