--- a/app/src/main/res/drawable/main_btn_background.xml
+++ b/app/src/main/res/drawable/main_btn_background.xml
@@ -4,6 +4,7 @@
     <stroke
         android:width="2.5dp"
         android:color="@color/colorAccentDark" />
+    <solid android:color="#FFF" />
     <corners android:radius="10dp" />
 </shape>
 
