--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/bannerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -37,7 +38,7 @@
             </LinearLayout>
 
             <include
-                layout="@layout/main_page_btn_one"
+                layout="@layout/main_page_btn"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.55" />
