--- a/app/src/main/res/layout/act_news.xml
+++ b/app/src/main/res/layout/act_news.xml
@@ -49,6 +49,30 @@
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
 
+                <com.balysv.materialripple.MaterialRippleLayout
+                    android:id="@+id/imgSearchActNews"
+                    android:layout_width="45dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="10dp"
+                    app:mrl_rippleAlpha="0.05"
+                    app:mrl_rippleColor="#10000000"
+                    app:mrl_rippleRoundedCorners="100dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerInParent="true"
+                            android:contentDescription="@null"
+                            android:rotation="0"
+                            app:srcCompat="@drawable/ic_search" />
+                    </RelativeLayout>
+                </com.balysv.materialripple.MaterialRippleLayout>
+
                 <TextView
                     android:id="@+id/lblTitleActNews"
                     android:layout_width="wrap_content"
