--- a/app/src/main/res/layout/main_page_btn.xml
+++ b/app/src/main/res/layout/main_page_btn.xml
@@ -49,14 +49,25 @@
             android:layout_height="match_parent"
             android:layout_margin="4dp"
             android:layout_weight="0.2"
+            android:orientation="vertical"
+            android:weightSum="1"
             android:background="@drawable/main_btn_background"
             android:gravity="center">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.6"
                 android:src="@drawable/search" />
+
+            <TextView
+                android:id="@+id/search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="تیکت یاب"
+                android:textColor="#000"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
