--- a/app/src/main/res/layout/act_ticket_answer.xml
+++ b/app/src/main/res/layout/act_ticket_answer.xml
@@ -128,17 +128,27 @@
                     android:layout_height="wrap_content"
                     android:scrollbars="none" />
 
-                <Button
-                    android:id="@+id/btnSubmitActTicketAnswer"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_margin="15dp"
-                    android:background="#014efe"
-                    android:text="ارسال پاسخ"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="17sp"
-                    android:textStyle="bold"
-                    tools:ignore="MissingPrefix" />
+                    android:layout_height="wrap_content">
+
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true" />
+
+                    <Button
+                        android:id="@+id/btnSubmitActTicketAnswer"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_margin="15dp"
+                        android:background="#014efe"
+                        android:text="ارسال پاسخ"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        tools:ignore="MissingPrefix" />
+                </RelativeLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
