--- a/app/src/main/res/layout/item_recycler_attach.xml
+++ b/app/src/main/res/layout/item_recycler_attach.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
+            android:maxLines="1"
             android:textSize="20sp" />
 
         <Button
