--- a/app/src/main/res/layout/act_detail_blog.xml
+++ b/app/src/main/res/layout/act_detail_blog.xml
@@ -172,7 +172,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/ToolbarActDetailBlog"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:ignore="WebViewLayout">
 
             <TextView
                 android:id="@+id/lblNameCommandActDetailBlog"
@@ -233,6 +234,15 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:background="@color/colorMenu" />
+
+            <WebView
+                android:id="@+id/WebViewBodyActDetailBlog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layoutDirection="rtl"
+                android:textDirection="rtl" />
 
             <LinearLayout
                 android:layout_width="match_parent"
