--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -26,15 +26,10 @@
                 android:orientation="vertical"
                 android:padding="2.8dp">
 
-                <ss.com.bannerslider.views.BannerSlider
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/SliderActMain"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.99"
-                    app:defaultIndicators="round_square"
-                    app:indicatorSize="7dp"
-                    app:interval="5000"
-                    app:loopSlides="true" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
 
             <include
