--- a/app/src/main/res/layout/item_recycler_attach.xml
+++ b/app/src/main/res/layout/item_recycler_attach.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
     android:layout_height="182dp">
 
     <LinearLayout
