--- a/app/src/main/res/layout/act_blog.xml
+++ b/app/src/main/res/layout/act_blog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipRefreshActBlog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,13 +90,13 @@
                 android:layout_height="3dp"
                 android:background="@color/colorAccent" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerBlog"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none"
                 tools:ignore="InvalidId" />
         </LinearLayout>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
