--- a/app/src/main/res/layout/act_send_ticket.xml
+++ b/app/src/main/res/layout/act_send_ticket.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayoutActSendTicket"
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputNameFamilytActSendTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -121,9 +121,9 @@
                         android:paddingStart="15dp"
                         android:textSize="14sp"
                         tools:ignore="MissingPrefix,RtlSymmetry,TextFields" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputEmailtActSendTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -143,9 +143,9 @@
                         android:paddingStart="15dp"
                         android:textSize="14sp"
                         tools:ignore="MissingPrefix,RtlSymmetry,TextFields" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputPhoneNumberActSendTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -166,9 +166,9 @@
                         android:paddingStart="15dp"
                         android:textSize="14sp"
                         tools:ignore="MissingPrefix,RtlSymmetry,TextFields" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputSubjectActSendTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -187,7 +187,7 @@
                         android:paddingStart="15dp"
                         android:textSize="14sp"
                         tools:ignore="MissingPrefix,RtlSymmetry,TextFields" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -258,7 +258,7 @@
 
                 </LinearLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputMessageActSendTicket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -279,9 +279,9 @@
                         android:paddingStart="15dp"
                         android:textSize="14sp"
                         tools:ignore="MissingPrefix,RtlSymmetry,TextFields" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/RecyclerAttach"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -289,4 +289,4 @@
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
