--- a/app/src/main/res/layout-large/act_detail_news.xml
+++ b/app/src/main/res/layout-large/act_detail_news.xml
@@ -164,7 +164,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:id="@+id/PageActDetailNews"
