--- a/app/src/main/res/layout/act_register.xml
+++ b/app/src/main/res/layout/act_register.xml
@@ -52,8 +52,6 @@
             android:gravity="center"
             android:hint="_   _   _   _   _   _   _   _   _   _"
             android:inputType="phone"
-            android:lines="1"
-            android:maxLength="11"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             tools:ignore="HardcodedText" />
@@ -88,6 +86,39 @@
         android:layout_marginTop="10dp"
         android:textColor="#a3a2a2"
         tools:ignore="HardcodedText,RtlHardcoded" />
+
+    <LinearLayout
+        android:id="@+id/RowNoPhoneActRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/lblNoPhoneActRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:text="تمایلی ندارم"
+            android:textColor="#a3a2a2"
+            tools:ignore="HardcodedText,RtlHardcoded" />
+
+        <RelativeLayout
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/circle_gray_empty">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerInParent="true"
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_arrow_right"
+                app:tint="#afafaf" />
+        </RelativeLayout>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressActRegister"
