--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash">
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/imgLogoActSplash"
@@ -13,18 +13,9 @@
         android:contentDescription="@null"
         android:src="@drawable/logo" />
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/AnimationActSplash"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/imgLogoActSplash"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-40dp"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/loading" />
 
-    <Button
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRefreshActSplash"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
