--- a/app/src/main/res/layout/act_base.xml
+++ b/app/src/main/res/layout/act_base.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <include
@@ -17,19 +17,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
+
     <include
         android:id="@+id/activity_BaseLoading"
         layout="@layout/sub_base_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" />
 
     <ViewStub
         android:id="@+id/activity_stub"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
-</RelativeLayout>
+</FrameLayout>
