--- a/app/src/main/res/layout/sub_base_loading.xml
+++ b/app/src/main/res/layout/sub_base_loading.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/AnimationActSplash"
+        android:id="@+id/sub_loading"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
