--- a/app/src/main/res/layout/sub_base_error.xml
+++ b/app/src/main/res/layout/sub_base_error.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/ErrorView"
+        android:id="@+id/tvError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -16,14 +16,14 @@
         android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/tryBtn"
-        android:text="تلاش مجدد"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnTryAgain"
+        android:layout_width="150dp"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:enabled="true"
-        android:layout_below="@+id/ErrorView"
+        android:layout_below="@id/tvError"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_accent"
+        android:text="تلاش مجدد"
+        android:textColor="@color/colorWhite"
         />
 </RelativeLayout>
