--- a/app/src/main/res/layout/row_recycler_image.xml
+++ b/app/src/main/res/layout/row_recycler_image.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/row_recycler_bg"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/ImageRecyclerImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:riv_corner_radius="10dp"
+        app:riv_border_width="2.5dp"
+        app:riv_border_color="@color/colorAccentDark"
         android:contentDescription="@null"
         android:scaleType="fitXY" />
 
@@ -15,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:background="#AB3F51B5"
+        android:background="@drawable/_row_recycler_round_bottom"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit ="marquee_forever"
         android:focusable="true"
