--- a/app/src/main/res/layout/act_send_ticket.xml
+++ b/app/src/main/res/layout/act_send_ticket.xml
@@ -26,8 +26,8 @@
                 android:layout_marginEnd="15dp"
                 android:contentDescription="@null"
                 android:rotation="180"
-                android:tint="@color/colorGrayText"
-                app:srcCompat="@drawable/ic_left" />
+                app:srcCompat="@drawable/ic_left"
+                app:tint="@color/colorGrayText" />
 
             <TextView
                 android:id="@+id/lblTitleActSendTicket"
