--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -21,4 +21,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="15dp"
         android:text="نسخه 1.0.0" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/AnimationActSplash"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/imgLogoActSplash"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-40dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading" />
 </RelativeLayout>
