--- a/app/src/main/res/layout/sub_base_error.xml
+++ b/app/src/main/res/layout/sub_base_error.xml
@@ -2,9 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#eee"
     android:orientation="vertical">
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/sub_loading"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:layout_above="@+id/tvError"
+        app:lottie_rawRes="@raw/error" />
     <TextView
         android:id="@+id/tvError"
         android:layout_width="match_parent"
