--- a/app/src/main/res/layout/act_base.xml
+++ b/app/src/main/res/layout/act_base.xml
@@ -3,17 +3,6 @@
     android:id="@+id/relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ViewStub
-        android:id="@+id/activity_stub"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
-    <include
-        android:id="@+id/activity_BaseError"
-        layout="@layout/sub_base_error"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
 
     <include
         android:id="@+id/activity_BaseEmpty"
@@ -22,6 +11,20 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <ViewStub
+        android:id="@+id/activity_stub"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/activity_BaseError"
+        layout="@layout/sub_base_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+
     <include
         android:id="@+id/activity_BaseLoading"
         layout="@layout/sub_base_loading"
@@ -29,8 +32,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
-
+        android:layout_alignParentTop="true"
+        android:visibility="gone" />
 
 
 </FrameLayout>
