--- a/app/src/main/res/drawable/background_comment_title.xml
+++ b/app/src/main/res/drawable/background_comment_title.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorAccent" />
-    <corners android:radius="8dp" />
+    <stroke
+        android:width="2.5dp"
+        android:color="@color/transparent" />
+    <corners android:topLeftRadius="10dp" android:topRightRadius="10dp" />
 </shape>
