--- a/app/src/main/res/layout/row_recycler_article.xml
+++ b/app/src/main/res/layout/row_recycler_article.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rootNews"
+    android:id="@+id/rootArticle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="3dp"
@@ -19,12 +19,12 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="270dp">
+            android:layout_height="200dp">
 
             <ImageView
-                android:id="@+id/imgRowRecyclerNews"
+                android:id="@+id/imgRowRecyclerArticle"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
                 android:contentDescription="@null"
                 android:scaleType="fitXY" />
@@ -32,12 +32,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_below="@id/imgRowRecyclerNews"
-                android:gravity="center|right"
+                android:layout_below="@id/imgRowRecyclerArticle"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/lblTitleRowRecyclerNews"
+                    android:id="@+id/lblTitleRowRecyclerArticle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -49,10 +49,10 @@
                     android:textColor="@color/colorMenu" />
 
                 <TextView
-                    android:id="@+id/lblDescriptionRowRecyclerNews"
+                    android:id="@+id/lblDescriptionRowRecyclerArticle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="7dp"
                     android:layout_marginRight="7dp"
                     android:ellipsize="end"
@@ -61,7 +61,7 @@
             </LinearLayout>
 
             <ProgressBar
-                android:id="@+id/ProgressRecyclerNews"
+                android:id="@+id/ProgressRecyclerArticle"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerInParent="true" />
@@ -74,7 +74,7 @@
             android:background="#f9f8f8">
 
             <RatingBar
-                android:id="@+id/ratingBarRowRecyclerNews"
+                android:id="@+id/ratingBarRowRecyclerArticle"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:layout_alignParentEnd="true"
@@ -101,7 +101,7 @@
                     android:src="@drawable/ic_like" />
 
                 <TextView
-                    android:id="@+id/lblLikeRowRecyclerNews"
+                    android:id="@+id/lblLikeRowRecyclerArticle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
